Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 15.0.0-rc1
-
None
-
-
b1bf4594b (15.0)
Description
There are reports about regressions
https://lists.qt-project.org/pipermail/qt-creator/2024-November/009322.html
https://lists.qt-project.org/pipermail/qt-creator/2024-November/009323.html
While mentioning 'master', these seem to apply also to 15.0
This affects both internal and external terminal. There /might/ to be some flakiness involved, as I had the impression that "internal" worked in some cases, but this might just have been a case where I started the wrong creator binary.
This worked with 14.0
Attachments
Issue Links
- relates to
-
QTCREATORBUG-32074 Debug remote linux project shows no application output
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-32072 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
606941,4 | Debugger: Fix Run in Terminal and output retrieval for RL/Boot2Qt/QNX | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
607027,1 | Debugger: Fix Run in Terminal and output retrieval for RL/Boot2Qt/QNX | master | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |