Debugger: Fix Run in Terminal and output retrieval for RL/Boot2Qt/QNX

Amends 265491e408c.

Replacing the DebuggerServerRunner by a simple Process lost the
SimpleTargetRunner's ability to run in terminal and to display output.
Re-add this.

Fixes: QTCREATORBUG-32072
Fixes: QTCREATORBUG-32074
Change-Id: I6439eeacbb2561f08b93cba140836919afe56efb
Reviewed-by: Christian Stenger <christian.stenger@qt.io>